# cubot

./: .gitignore  README.md  pyproject.toml
src/cubot/: __init__.py  agent.py  cube.py  value.py
src/python_package/: __init__.py  cube.py
