[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cubot"
authors = [{ name = "Adam McCartney", email = "adam.jmcc02@gmail.com" }]
description = "Rubik's Cube solver and simulator"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10.1"
dynamic = ["version"]
dependencies = [
    "numpy>=1.21.0",
    "ipykernel>=6.5.0",
    "matplotlib>=3.4.0",
]

[project.urls]
Documentation = "https://github.com/microsoft/python-package-template/tree/main#readme"

